Second commit for Steps App

--- a/force-app/main/default/classes/Steps/Steps_SRV.cls
+++ b/force-app/main/default/classes/Steps/Steps_SRV.cls
@@ -1,9 +1,9 @@
 /**
  * @description       : 
  * @author            : $username  Deloitte
- * @date              : 02-04-2025
+ * @date              : 02-06-2025
  * @group             : ITBA
- * @last modified on  : 02-04-2025
+ * @last modified on  : 02-06-2025
  * @last modified by  : Shubham Raut
 **/
 public with sharing class Steps_SRV {
@@ -14,6 +14,7 @@ public with sharing class Steps_SRV {
             singleRecord.External_ID__c = generateExternalId(wrapper);
             singleRecord.Contact__c = wrapper.contact;
             singleRecord.Todays_Steps__c = wrapper.todaysSteps;
+            singleRecord.Competition__c = wrapper.competition;
             if(wrapper.goldenPoint > 0)
                 singleRecord.Golden_Point__c = wrapper.goldenPoint;
             
@@ -26,7 +27,7 @@ public with sharing class Steps_SRV {
 
     private static String generateExternalId(Steps_WRP.CreateStepsWrapper wrapper) {
         String externalId = '';
-        externalId = 'EXT~' + wrapper?.contact;
+        externalId = 'EXT~' + wrapper?.competition +'~' + wrapper?.contact;
         return externalId;
     }
 }
