--- a/force-app/main/default/classes/Steps/Steps_WRP.cls
+++ b/force-app/main/default/classes/Steps/Steps_WRP.cls
@@ -1,13 +1,14 @@
 /**
  * @description       : 
  * @author            : $username  Deloitte
- * @date              : 02-04-2025
+ * @date              : 02-06-2025
  * @group             : ITBA
- * @last modified on  : 02-04-2025
+ * @last modified on  : 02-06-2025
  * @last modified by  : Shubham Raut
 **/
 public with sharing class Steps_WRP {
     public class CreateStepsWrapper {
+        public String competition;
         public String contact;
         public Integer todaysSteps;
         public Integer goldenPoint;
